# tiktok_webapp

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  main.py  pyproject.toml
src/: __init__.py  app.py  config.py  extensions.py
src/database/: __init__.py  init_db.py
src/models/: __init__.py  tiktok_models.py  user.py
src/repositories/: __init__.py  user_repository.py
src/services/: auth_service.py  telegram_service.py  tiktok_live_service.py  tiktok_monitoring_service.py  video_service.py
src/tiktok_recorder/: __init__.py
src/tiktok_recorder/core/: __init__.py
src/tiktok_recorder/upload/: __init__.py
src/tiktok_recorder/utils/: __init__.py
src/utils/: cookie_manager.py  logger_manager.py
src/views/: api.py  main.py  tiktok_live.py
static/css/: admin.css  components.css  style.css  upload.css
static/js/: app.js  live_monitor.js
templates/: about.html  admin_users.html  base.html  dashboard.html  index.html  live_monitor.html  live_monitoring.html  live_settings.html  login.html  register.html  result.html  tiktok_live.html  upload.html  video_upload.html
tests/: test_app.py  test_auth.py  test_sqlite_integration.py  test_tiktok_live.py  test_user_registration.py  test_video_processing.py
